--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "~2.1.0",
-    "coffee-script": "~1.7.1",
-    "event-stream": "~3.1.0",
-    "tmp": "0.0.27",
+    "should": "^10.0.0",
+    "coffee-script": "~1.10.0",
+    "event-stream": "^3.3.4",
+    "tmp": "^0.0.28",
     "stream-assert": "~2.0.3",
     "funsert": "~0.1.1",
     "gulp": "~3.9.0"
