--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "^10.0.0",
-    "coffee-script": "~1.10.0",
+    "should": "^11.1.1",
+    "coffee-script": "^1.11.1",
     "event-stream": "^3.3.4",
-    "tmp": "^0.0.28",
+    "tmp": "^0.0.29",
     "stream-assert": "~2.0.3",
     "funsert": "~0.1.1",
     "gulp": "~3.9.0"
