--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
   "main": "./index.js",
   "dependencies": {
     "gulp-util": "~3.0.7",
-    "jsdom": "^9.4.1",
-    "query-selector": "^1.0.9",
+    "jsdom": "^15.0.0",
+    "query-selector": "^2.0.0",
     "through2": "*"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "^11.1.1",
     "coffee-script": "^1.11.1",
-    "event-stream": "^3.3.4",
-    "tmp": "^0.0.31",
-    "stream-assert": "~2.0.3",
+    "event-stream": "^4.0.1",
     "funsert": "~0.1.1",
-    "gulp": "~3.9.0"
+    "gulp": "^4.0.2",
+    "mocha": "*",
+    "should": "^13.2.3",
+    "stream-assert": "~2.0.3",
+    "tmp": "^0.1.0"
   },
   "engines": {
     "node": ">=4.0.0",
